# crypto-trade

./: .env.example  .gitignore  BASELINE.md  BASELINE_V2.md  BASELINE_V3.md  CLAUDE.md  ITERATION_PLAN_8H.md  ITERATION_PLAN_8H_V2.md  ITERATION_PLAN_8H_V3.md  README.md  analysis_v1_baseline_battletest.md  analysis_v1v2_combined.md  analyze_btc_contagion.py  analyze_combined_v1v2.py  analyze_drawdown_brake.py  analyze_hit_rate_gate.py  analyze_per_symbol_brake.py  analyze_v1_baseline_core.py  analyze_weighting_schemes.py  compare_baseline_vs_clean.py  pyproject.toml  qr_phase1_feature_eda.py  run_baseline_v152.py  run_baseline_v173.py  run_baseline_v176.py  run_baseline_v186.py  run_baseline_v2.py  run_iteration_001.py  run_iteration_004.py  run_iteration_010.py  run_iteration_016.py  run_iteration_041.py  run_iteration_067.py  run_iteration_091.py  run_iteration_092.py  run_iteration_098.py  run_iteration_101.py  run_iteration_112b.py  run_iteration_163.py  run_iteration_165.py  (+18 more)
blog/: parquet-feature-store.md  two-agents-140-iterations.md
diary-v2/: iteration_001.md  iteration_002.md  iteration_003.md  iteration_004.md  iteration_005.md  iteration_006.md  iteration_007.md  iteration_008.md  iteration_009.md  iteration_010.md  iteration_011.md  iteration_012.md  iteration_013.md  iteration_014.md  iteration_015.md  iteration_016.md  iteration_017.md  iteration_018.md  iteration_019.md  iteration_020.md  iteration_021.md  iteration_022.md  iteration_023.md  iteration_024.md  iteration_025.md  iteration_026.md  iteration_027.md  iteration_028.md  iteration_029.md  (+14 more)
(+803 files in other folders)
