[project]
name = "crypto-trade"
version = "0.1.0"
description = "Binance Futures USD crypto trading bot"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
crypto-trade = "crypto_trade.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_trade"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
