[project]
name = "crypto-trade"
version = "0.1.0"
description = "Binance Futures USD crypto trading bot"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28"]

[project.scripts]
crypto-trade = "crypto_trade.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_trade"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]
notebook = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "arch>=7.0",
    "hmmlearn>=0.3",
    "scikit-learn>=1.5",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
